Initial version of Telegram chatbot with coin purchase menu (WIP)
This is the initial version of the Telegram chatbot project.
Features implemented so far:
- Main menu navigation
- Coin purchase options with reply keyboard
- Basic structure for handling user messages

Pending features:
- Payment gateway integration (Zarinpal)
- Profile section with user coin status

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+# Ignore appsettings file (contains secrets)
+appsettings.json
+appsettings.Development.json
